...
        <!-- Routine Header Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/routine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/task_list_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/routine_title"
...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <Button
                    android:id="@+id/start_routine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/start_routine" />

                <Button
                    android:id="@+id/stop_routine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/stop_routine"
                    android:visibility="invisible"/>

            </FrameLayout>

            <Button
                android:id="@+id/add_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:text="@string/add_task" />
...
            <FrameLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/pause_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:src="@android:drawable/ic_media_pause"
                    app:fabCustomSize="35dp"
                    android:layout_gravity="center" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restart_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/restart"
                    android:src="@android:drawable/ic_media_play"
                    app:fabCustomSize="35dp"
...
