<resources>
    <string name="app_name">HabitizerApp</string>
    <string name="app_title">Habitizer</string>
    <string name="add_routine">Add Routine</string>
    <string name="routine">Routine</string>
    <string name="estimated_routine_time">Estimated Routine Time</string>
    <string name="routine_view">Routine View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estimated_time">estimated time</string>
    <string name="actual_time">actual time</string>
    <string name="start_routine">Start Routine</string>
    <string name="stop_routine">Stop Routine</string>
    <string name="add_task">Add Task</string>
...
