...
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:text="@string/estimated_routine_time"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteTaskButton"
        app:layout_constraintStart_toEndOf="@+id/RoutineTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteTaskButton"
        android:layout_width="48dp"
...
